Fixed annoying extra space

--- a/styles/flag-styles-anim.css
+++ b/styles/flag-styles-anim.css
@@ -72,7 +72,7 @@
 }
 
 .flag-svg, .round-title, #round {
-    animation-name: rollDown;
+    animation-name: rollUp;
     animation-duration: 1s;
     animation-iteration-count: 1;
     animation-fill-mode: forwards;
