--- a/styles/main.css
+++ b/styles/main.css
@@ -1,20 +1,19 @@
+html {
+    overflow: hidden;
+}
 
 body {
     padding: 0;
     margin: 0;
-    height: 100vh;
     background-color: rgb(187, 150, 187);
 }
 
 .game-bg {
     width: 600px;
-    height: 100%;
-    display: block;
-    position: absolute;
-    margin-left: auto;
-    margin-right: auto;
-    left: 0;
-    right: 0;
+    height: 100vh;
+    display:block;
+    position: relative;
+    margin: auto;
     display: flex;
     justify-content: space-between;
     z-index: 0;
@@ -116,6 +115,7 @@ body {
     margin-right: auto;
     left: 0;
     right: 0;
+    padding: 0;
     background-color: #24918c;
 }
 
@@ -123,7 +123,7 @@ body {
     display: block;
     position: relative;
     margin: auto;
-    top: 57vh;
+    bottom: 40vh;
     padding: 10px;
     border-radius: 10px;
     border-color: rgb(87, 80, 187);
@@ -202,6 +202,7 @@ body {
     position: absolute;
     margin-left: auto;
     margin-right: auto;
+    margin-bottom: 0;
     z-index: 4;
     left: 0;
     right: 0;
@@ -220,7 +221,7 @@ body {
 }
 
 .paper-right {
-    position: relative;
+    position: absolute;
     float: right;
 }
 
